force-app/main/default/objects/Org_Event__e/Org_Event__e.object-meta.xml
<CustomObject>
    <description>Published when an onboarding Account is Approved/Rejected; consumed by EventBridge to uDC PATCH.</description>
    <label>Org Event</label>
    <pluralLabel>Org Events</pluralLabel>
</CustomObject>