force-app/main/default/objects/Org_Event__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Constant value: sfdc.account.updated</description>
    <label>Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>