force-app/main/default/objects/Org_Event__e/fields/Field_Deltas__c.field-meta.xml
<CustomField>
    <fullName>Field_Deltas__c</fullName>
    <description>JSON string of changed tracked fields and their new values.</description>
    <label>Field Deltas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>