force-app/main/default/objects/Org_Event__e/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <description>Maps to Account.uLab_Acct_Number__c (uDC org_id).</description>
    <label>Org ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>