force-app/main/default/objects/Org_Event__e/fields/Org_SFDC_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_SFDC_Id__c</fullName>
    <description>Maps to Account.Id (SFDC record ID).</description>
    <label>Org SFDC ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>