force-app/main/default/objects/Org_Event__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>Maps to Contact.Portal_User_ID__c (uDC user_id).</description>
    <label>User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>